Applied a number of netbeans code hints